<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f5e7dc"
    tools:context=".HelpSupport">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/menuToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#d9a678"
        android:elevation="4dp"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:title="Help Support"
        app:titleMarginStart="145dp"
        android:textColor="#f5e7dc"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:paddingHorizontal="16dp"
        android:text="If you have any questions or need assistance, please contact us through the following channels:"
        android:textColor="#6d4c41"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/menuToolbar" />

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageButton
            android:id="@+id/facebookButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:contentDescription="@string/facebook_button"
            android:src="@drawable/facebook" />

        <ImageButton
            android:id="@+id/instagramButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:background="?android:attr/selectableItemBackground"
            android:contentDescription="@string/instagram_button"
            android:src="@drawable/instagram" />

        <ImageButton
            android:id="@+id/tiktokButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:background="?android:attr/selectableItemBackground"
            android:contentDescription="@string/tiktok_button"
            android:src="@drawable/tiktok" />

    </TableRow>

</androidx.constraintlayout.widget.ConstraintLayout>
