<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="#f5e7dc">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/menuToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#d9a678"
        android:elevation="4dp"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:title="About Us"
        app:titleMarginStart="165dp"
        android:textColor="#f5e7dc"
        tools:ignore="MissingConstraints">

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <View
                android:layout_width="400dp"
                android:layout_height="7dp"
                android:background="@color/colorPrimary"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="10dp" />

            <TextView
                android:id="@+id/introduction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/introduction"
                android:textSize="16sp"
                android:textColor="#6d4c41"
                android:fontFamily="sans-serif-medium"
                android:justificationMode="inter_word"
                android:textAlignment="textStart" />


            <View
                android:layout_width="400dp"
                android:layout_height="7dp"
                android:background="@color/colorPrimary"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="My Team"
                android:textStyle="bold"
                android:textColor="#6d4c41"
                android:fontFamily="sans-serif-light"
                android:textSize="25sp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp" />

            <TextView
                android:id="@+id/title1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Developer and Team Leader"
                android:textStyle="bold"
                android:textColor="#6d4c41"
                android:fontFamily="sans-serif-light"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/image1"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:src="@drawable/tomas"
                android:padding="10dp"
                app:shapeAppearanceOverlay="@style/CircleImageView"
                app:strokeColor="@color/colorPrimary"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                app:strokeWidth="10dp"/>

            <TextView
            android:id="@+id/name1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:text="Keen Thomas Memoracion"
            android:textColor="#6d4c41"
            android:textSize="20sp" />

            <TextView
                android:id="@+id/description1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description1"
                android:textColor="#6d4c41"
                android:fontFamily="sans-serif-medium"
                android:textSize="15sp"
                android:gravity="center"
                android:layout_marginTop="10dp" />

            <View
                android:layout_width="400dp"
                android:layout_height="7dp"
                android:background="@color/colorPrimary"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="10dp" />

            <TextView
                android:id="@+id/title2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Hardware Creator"
                android:textStyle="bold"
                android:textColor="#6d4c41"
                android:fontFamily="sans-serif-light"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/image2"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:src="@drawable/ladao2"
                android:padding="10dp"
                app:shapeAppearanceOverlay="@style/CircleImageView"
                app:strokeColor="@color/colorPrimary"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                app:strokeWidth="10dp"/>

            <TextView
                android:id="@+id/name2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:text="Francis Ladao"
                android:textColor="#6d4c41"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/description2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description2"
                android:textColor="#6d4c41"
                android:fontFamily="sans-serif-medium"
                android:textSize="15sp"
                android:gravity="center"
                android:layout_marginTop="10dp" />

            <View
                android:layout_width="400dp"
                android:layout_height="7dp"
                android:background="@color/colorPrimary"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="10dp" />

            <TextView
                android:id="@+id/title3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Thesis Paper Member"
                android:textStyle="bold"
                android:textColor="#6d4c41"
                android:fontFamily="sans-serif-light"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/image3"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:src="@drawable/sanchez"
                android:padding="10dp"
                app:shapeAppearanceOverlay="@style/CircleImageView"
                app:strokeColor="@color/colorPrimary"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                app:strokeWidth="10dp"/>

            <TextView
                android:id="@+id/name3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:text="Erika Sanchez"
                android:textColor="#6d4c41"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/description3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description3"
                android:textColor="#6d4c41"
                android:fontFamily="sans-serif-medium"
                android:textSize="15sp"
                android:gravity="center"
                android:layout_marginTop="10dp" />

            <View
                android:layout_width="400dp"
                android:layout_height="7dp"
                android:background="@color/colorPrimary"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="10dp" />

            <TextView
                android:id="@+id/title4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Thesis Paper Member"
                android:textStyle="bold"
                android:textColor="#6d4c41"
                android:fontFamily="sans-serif-light"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/image4"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:src="@drawable/linca"
                android:padding="10dp"
                app:shapeAppearanceOverlay="@style/CircleImageView"
                app:strokeColor="@color/colorPrimary"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                app:strokeWidth="10dp"/>

            <TextView
                android:id="@+id/name4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:text="Linca Lestojas"
                android:textColor="#6d4c41"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/description4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description4"
                android:textColor="#6d4c41"
                android:fontFamily="sans-serif-medium"
                android:textSize="15sp"
                android:gravity="center"
                android:layout_marginTop="10dp" />

            <View
                android:layout_width="400dp"
                android:layout_height="7dp"
                android:background="@color/colorPrimary"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="10dp" />


            <TextView
                android:id="@+id/contact_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Contact Us Here"
                android:textColor="#6d4c41"
                android:fontFamily="sans-serif-medium"
                android:textSize="16sp"
                android:gravity="center"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="20dp"/>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="90dp">

                <ImageButton
                    android:id="@+id/facebookButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/facebook"
                    android:background="?android:attr/selectableItemBackground"
                    android:contentDescription="@string/facebook_button" />
                <ImageButton
                    android:id="@+id/instagramButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/instagram"
                    android:layout_marginStart="30dp"
                    android:background="?android:attr/selectableItemBackground"
                    android:contentDescription="@string/instagram_button" />
                <ImageButton
                    android:id="@+id/tiktokButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:src="@drawable/tiktok"
                    android:background="?android:attr/selectableItemBackground"
                    android:contentDescription="@string/tiktok_button" />

            </TableRow>

            <View
                android:layout_width="400dp"
                android:layout_height="7dp"
                android:background="@color/colorPrimary"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="10dp" />
        </LinearLayout>
    </ScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
